[package]
name = "kem-combiners"
version = "0.1.0"
edition = "2021"

[dependencies]
classic-mceliece-rust = { version = "3.1.0", features = ["mceliece6960119f"] }
generic-tests = "0.1.3"
hybrid-array = { version = "0.2.3", features = ["extra-sizes"] }
ml-kem = "0.2.1"
rand = "0.8.5"
rand_core = "0.6.4"
sha3 = "0.10.8"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "ml-kem"
harness = false

[[bench]]
name = "mceliece"
harness = false
